# s09-emlov4-litserve

./: Benchmark_Report.md  Dockerfile  README.md  data.dvc  dvc.yaml  pyproject.toml  report.md  report_gen.sh  split.py
configs/: eval.yaml  infer.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: catdog.yaml  dogbreed.yaml  dogbreed_infer.yaml
configs/experiment/: catdog_ex.yaml  dogbreed_ex.yaml  dogbreed_ex_train.yaml
configs/hparams/: catdog_ex_vit_hparam.yaml  dogbreed_ex_vit_hparam.yaml
configs/hydra/: default.yaml
configs/logger/: aim.yaml  comet.yaml  default.yaml  mlflow.yaml
configs/model/: cat_dog_classsifer.yaml  dogbreed_classifier.yaml
configs/trainer/: default.yaml
scripts/: metrics_fetch.py  multirun_metrics_fetch.py
src/: eval.py  infer.py  sample_test_llama32_working.py  sample_test_working.py  server_baseline.py  server_batch_fullp.py  server_batch_fullp_w0.py  server_batch_halfp.py  server_llm_llama.py  server_llm_llama3_2.py  server_llm_llama3_2_torchao.py  server_llm_llama_backup.py  train.py
src/datamodules/: cat_dog_modules.py  dogbreed_modules.py  split.py
src/models/: cat_dog_classifier.py  dogbreed_classifer.py
tests/: benchmark_base.py  conftest.py  test_client.py  test_eval.py  test_flops.py  test_infer.py  test_llm_base.py  test_llm_llama_3_2.py  test_train.py  tests_llm_llama.py
tests/data_modules/: test_dogbreed_datamodules.py
tests/models/: test_timm_classifier.py
